# mysql-kafka-mirror

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: ENV_VARS.md  IFLAGS.md
examples/: monkeypatch_pymysql_positional.py  monkeypatch_pymysql_selects.py  monkeypatch_sqlalchemy.py  sqlalchemy_manual_instrument.py  sqlalchemy_patch_core.py  sqlalchemy_patch_sessionmaker.py
scripts/: inspect_kafka.py  install-docker-compose.sh
src/mysql_interceptor/: __init__.py  connect.py  errors.py  monkeypatch.py  pool_counter.py  sqlalchemy_interceptor.py  sqlalchemy_interceptor.py.orig  utils.py
src/mysql_interceptor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mysql_interceptor/adapters/: base.py  pymysql.py  registry.py
src/mysql_interceptor/config/: redaction.py  settings.py
src/mysql_interceptor/dbapi/: classify.py  constants.py  txn_buffer.py  wrappers.py
src/mysql_interceptor/events/: __init__.py  models.py
src/mysql_interceptor/kafka/: batching.py  confluent.py  kafka_python.py  publisher.py
tests/: conftest.py
tests/integration/: _helpers.py  docker-compose.yml
tests/integration/pymysql/: requirements.txt  test_integration_pymysql_docker.py
tests/integration/sqlalchemy/: requirements.txt  test_integration_sqlalchemy_docker.py
tests/unit/: test_executemany_semantics.py  test_iflags_driver.py  test_server_info.py  test_settings_ddl.py  test_settings_env.py
tools/: generate_env_vars_md.py
