[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mysql-interceptor"
version = "0.1.0"
description = "Intercept MySQL writes and mirror to Kafka with Java-compatible schema."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
authors = [{"name"= "Leszek Reimus"}]
dependencies = ["confluent-kafka>=2.2"]

[project.optional-dependencies]
pymysql = ["PyMySQL>=1.1"]
sqlalchemy = ["SQLAlchemy>=1.4"]
